--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+body{
+    background-color: rgb(247, 247, 247)    ;
+}
+header{
+    height: 56px;
+    background-color: white;
+}
 .nav_bar_logo{
     height: 32px;
     width: 32px;
@@ -44,6 +51,36 @@ width: 100%;
 .navbar-text:hover{
     color: #FF6900;
 }
-.slide_image{
-    height: 600px;
+.nav_img{
+    width: 100%;
+    height: 655px;
+    position: relative;
+}
+.carousel-caption{
+    position: absolute;
+    text-align: left;
+    top: 230px;
+    left: 150px;
+}
+.carousel-caption h3{
+    font-family: "MiSans Latin", sans-serif;
+    font-size: 48px;
+    font-weight: 700;
+}
+.carousel-caption p{
+    font-size: 24px;
+    font-family: "MiSans Latin", sans-serif;
+    font-weight: 500;
+}
+.carousel_learn_more{
+    position: absolute;
+    top: 200px;
+    left: 0px;
+    height: 40px;
+    width: 140px;
+    border: none;
+}
+.carousel_learn_more a{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
 }
