--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,8 @@ header{
     height: 56px;
     background-color: white;
 }
-.nav_bar_logo{
-    height: 32px;
-    width: 32px;
-}
+@import url(https://i03.appmifile.com/i18n/fonts/MiSansLatin/vf/4.woff2?v=lwrpi0tp);
+@import url(https://i03.appmifile.com/i18n/fonts/MiSansLatin/vf/3.woff2?v=lwrpi0tp);
 .nav-link{
     position: relative;
     font-family: "MiSans Latin", sans-serif;
@@ -21,7 +19,7 @@ header{
     font-weight: 600;
     position: relative;
 }
-.nav-link::after{
+.nav-link-top::after{
     position: absolute;
     content: "";
     left: 0px;
@@ -30,10 +28,10 @@ header{
     height: 3px;
     width: 0%;
 }
-.nav-link:hover:after{
+.nav-link-top:hover:after{
 width: 100%;
 }
-.nav-link:hover{
+.nav-link-top:hover{
     color: #FF6900;
 }
 .navbar-text::after{
@@ -56,10 +54,11 @@ width: 100%;
     height: 655px;
     position: relative;
 }
+
 .carousel-caption{
     position: absolute;
     text-align: left;
-    top: 230px;
+    top: 150px;
     left: 150px;
 }
 .carousel-caption h3{
@@ -83,4 +82,162 @@ width: 100%;
 .carousel_learn_more a{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+}
+.header_div svg{
+    cursor: pointer;
+}
+.header_div svg .logo__home{
+    transform: translateX(-100%);
+    transition: all 0.5s;
+}
+.header_div svg:hover .logo__home{
+    transform: translateX(0%);
+    transition: all 0.5s;
+}
+.feature-tab-title{
+    font-family: "MiSans Latin", sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 120px;
+    margin-bottom: 48px;
+}
+.featured_product_tab{
+    justify-content: center;
+}
+#nav_selection .active{
+    position: relative;
+    color: #FF6900;
+    background-color: transparent;
+}
+.featured_product_tab button{
+    color: black;
+}
+.featured_product_tab button:hover{
+    color: black;
+}
+#nav_selection .active::after{
+    content: "";
+    position: absolute;
+    display: block;
+    top: 112%;
+    height: 3px;
+    width: 67%;
+    background-color: #FF6900;
+}
+.item_info_text h2{
+    font-family: "MiSans Latin", sans-serif;
+    font-size: 26px;
+    font-weight: 700;
+}
+.item_info_text h3{
+    font-family:"MiSans Latin", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+}
+.tab_text_div{
+    width: 636px;
+    height: 316px;;
+    background-color: rgb(247, 247, 247) ;
+    margin-top: 16px;
+}
+.tab_text_div h2{
+   padding-top: 150px;
+}
+@media (max-width: 1400px){
+    .tab_text_div{
+        width: 546px;
+        height: 270.35px;
+    }
+    .tab_text_div h2{
+        padding-top: 100px;
+    }
+}
+@media (max-width: 1200px){
+    .tab_text_div{
+        width: 456px;
+        height: 226px;
+    }
+}
+@media (max-width: 992px){
+    .tab_text_div{
+        width: 336px;
+        height: 167px;
+    }
+    .tab_text_div h2{
+        padding-top: 70px;
+    }
+}
+@media (max-width: 768px){
+    .tab_text_div{
+        width: 100%;
+        height: 240px;
+    }
+    .tab_text_div h2{
+        padding-top: 100px;
+    }
+}
+.featured_product_item{
+    background-color: rgb(247, 247, 247);
+}
+.featured_product_item img{
+    padding: 24px 50px;
+}
+.featured_product_item h5{
+    font-family: "MiSans Latin", sans-serif;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 700;
+}
+.featured_product_item p{
+    font-family: "MiSans Latin", sans-serif;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 600;
+}
+.featured_product_item p span{
+    font-family: "MiSans Latin", sans-serif;
+    color: rgb(208, 208, 208);
+    font-size: 14.4px;
+    font-weight: 400;
+    text-decoration-line: line-through;
+}
+.learn_more_btn_fp span{
+    font-family: "MiSans Latin", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+/* .fp_row_1{
+    position: relative;
+    cursor: pointer;
+}
+.fp_row_1 a{
+    position: absolute;
+    left: 66%;
+    bottom: 9%;
+    opacity: 0%;
+    transition: all 0.5s;
+}
+.fp_row_1 :hover a{
+    opacity: 100%;
+    bottom: 20%;
+} */
+ .fp_row_1 a{
+    transform: translateY(60%);
+    opacity: 0;
+    transition: all .5s ease-in-out;
+ }
+ .fp_row_1:hover a
+ {
+    opacity: 1;
+    transform: translateY(0%);
+
+ }
+.fp_row_1 img{
+    overflow: hidden;
+    transition: all 0.5s;
+}
+.fp_row_1:hover img{
+    transform:scale(1.1);
+    
 }
